<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="PMA">REPÚBLICA DE PANAMÁ</string>
    <string name="CGR">CONTRALORÍA GENERAL DE LA REPÚBLICA</string>
    <string name="INEC">INSTITUTO NACIONAL DE ESTADÍSTICA Y CENSO</string>
    <string name="inec">Instituto Nacional de Estadística y Censo</string>
    <string name="c01">Capítulo I.  Localización de la Empresa</string>
    <string name="c02">Capítulo II.  Datos de la Empresa y del Informante</string>
    <string name="c03">Capítulo III.  Organización de la Empresa</string>
    <string name="c04">Capítulo IV.  Actividades Económicas de la Empresa</string>
    <string name="c05">Capítulo V.  Ventas, Exportaciones y Recursos Humanos de la Empresa</string>
    <string name="c06">Capítulo VI.  Innovación de productos, de procesos, organizacional y de Comercialización</string>
    <string name="c07">Capítulo VII.  Actividades Innovativas, Gastos, factores y Dificultades para Innovar</string>
    <string name="c08">Capítulo VIII.  Fuente de Financiamiento para las Actividades de Innovación</string>
    <string name="c09" tools:ignore="Typos">Capítulo IX.  Patentes, Derechos de Propiedad intelectual, Marca y Normas de Calidad</string>
    <string name="c10">Capítulo X.  Perspectivas de Innovaciones Futuras</string>
    <string name="cap01"><font falmily="sans-serif-condensed">Capítulo I.</font></string>
    <string name="cap02">Capítulo II.</string>
    <string name="cap03">Capítulo III.</string>
    <string name="cap04">Capítulo IV.</string>
    <string name="cap05">Capítulo V.</string>
    <string name="cap06">Capítulo VI.</string>
    <string name="cap07">Capítulo VII.</string>
    <string name="cap08">Capítulo VIII.</string>
    <string name="cap09">Capítulo IX.</string>
    <string name="cap10">Capítulo X.</string>
    <string name="cap_test">CAPÍTULO 0.</string>
    <string name="ctxt01">Localización de la Empresa</string>
    <string name="ctxt02">Datos de la Empresa y del Informante</string>
    <string name="ctxt03">Organización de la Empresa</string>
    <string name="ctxt04">Actividades Económicas de la Empresa</string>
    <string name="ctxt05">Ventas, Exportaciones y Recursos Humanos de la Empresa</string>
    <string name="ctxt06">Innovación de productos, de procesos, organizacional y de Comercialización</string>
    <string name="ctxt07">Actividades Innovativas, Gastos, factores y Dificultades para Innovar</string>
    <string name="ctxt08">Fuente de Financiamiento para las Actividades de Innovación</string>
    <string name="ctxt09" tools:ignore="Typos">Patentes, Derechos de propiedad intelectual, marca y normas de calidad</string>
    <string name="ctxt10">Perspectivas de Innovaciones Futuras</string>
    <string name="ctxt_test">Título del capítulo. mensaje de prueba .....</string>
    <string name="subcap000" />
    <string name="subcap001">Parte 1</string>
    <string name="subcap002">Parte 2</string>
    <string name="subcap003">Parte 3</string>
    <string name="subcap021">1. Datos de la Empresa</string>
    <string name="subcap022">2. Datos del Informante</string>
    <string name="subcap051">1. Ventas y Exportaciones</string>
    <string name="subcap052">2. Recursos Humanos de la Empresa</string>
    <string name="subcap061">1. Innovación de Productos (Bienes y Servivios)</string>
    <string name="subcap062">2. Innovación de Procesos</string>
    <string name="subcap063">3. Innovación Organizacional</string>
    <string name="subcap064">4. Innovación en la Comercialización</string>
    <string name="subcap_test">Subtítulo del capítulo, mensaje de prueba</string>
    <string name="secc01">Sección 1.</string>
    <string name="secc02">Sección 2.</string>
    <string name="secc03">Sección 3.</string>
    <string name="secc04">Sección 4.</string>
    <string name="s01">Sección 1. Uso de Internet</string>
    <string name="s02">Sección 2. Seguridad de la Empresa a travéz de las Tecnologías de la Información y las comunicacions (YIC)</string>
    <string name="s03">Sección 3. Comercio Electrónico</string>
    <string name="s04">Sección 4. Gastos Por Comercio Electrónico</string>
    <string name="s05">OBSERVACIONES DEL MÓDULO DE COMERCIO ELECTRÓNICO</string>
    <string name="stxt01">Uso de Internet</string>
    <string name="stxt02">Seguridad de la Empresa, a travéz de las Tecnologías de la Información y las comunicacions (TIC)</string>
    <string name="stxt03">Comercio Electrónico</string>
    <string name="stxt04">Gastos Por Comercio Electrónico</string>
    <string name="encuestatitle">Encuesta de Innovación en Empresas</string>
    <string name="modulotitle">Módulo de Comercio Electrónico en la Empresa</string>
    <string name="subtittle1Main">Instituto Nacional de Estadística y Censo</string>
    <string name="informe">INFORME</string>
    <string name="informetxt">Datos del Formulario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="init">Iniciar</string>
    <string name="back">Regresar</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="menu">Menu</string>
    <string name="leftBranch">}</string>
    <string name="newForm">Finalizar Empadronamiento</string>
    <string name="spam">Xxxxxxxxx Xxxxxxxx</string>
    <string name="closeSesion">¿Desea cerrar la sesión actual?</string>
    <string name="claveaccess"><b>Clave de acceso:</b></string>
    <string name="emailCharacters">AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz._-@0123456789;</string>
    <string-array name="emptyArr" />
    <string name="hint_condicion"><b>Condición</b></string>
    <string name="hint_ncontrolB"><b>N° Control</b></string>
    <string name="hint_ruc"><b>RUC</b></string>
    <string name="hint_razon"><b>Razón Social</b></string>
    <string name="hint_ncapt"><b>N° captura</b></string>
    <string name="hin_nameL"><b>Nombre comercial</b></string>
    <string name="hint_tel"><b>Teléfono:</b></string>
    <string name="mail"><b>Correo/Email:</b></string>
    <string name="hint_prov"><b>Provincia</b></string>
    <string name="hint_dist"><b>Distrito</b></string>
    <string name="hint_corre"><b>Corregimiento</b></string>
    <string name="hint_dir"><b>Dirección</b></string>
    <string-array name="arr_typeForms">
        <item>Formularios guardados localmente</item>
        <item>Formularios asignados</item>
        <item>Formularios enviados al servidor</item>
    </string-array>
    <string-array name="arr_superForms">
        <item>Formularios asignados</item>
        <item>Formularios con inconsistencias</item>
    </string-array>
    <string-array name="arr_condiciones">
        <item>Completa</item>
        <item>Consolidada</item>
        <item>Cerró y no fue reemplazada</item>
        <item>Cerró y fue reemplazada</item>
        <item>Rehúsa</item>
        <item>No localizada</item>
        <item>No operó</item>
        <item>Otra condición</item>
    </string-array>
    <string-array name="arr_onetofive">
        <item>*</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="arr_hightolow">
        <item>Grado de importacia:</item>
        <item>(1) Alta</item>
        <item>(2) Media</item>
        <item>(3) Baja</item>
        <item>(4) Irrelevante</item>
    </string-array>
    <string-array name="arr_solicito">
        <item>Solicitó apoyo</item>
        <item>(1) Sí solicitó, pero no obtuvo</item>
        <item>(2) Sí solicitó, si lo obtuvo</item>
        <item>(3) No solicitó apoyo</item>
    </string-array>
    <string-array name="arr_provincias">
        <item>Panamá</item>
        <item>Panamá Oeste</item>
        <item>Coclé</item>
        <item>Chiriquí</item>
        <item>Colón</item>
        <item>Los Santos</item>
        <item>Veraguas</item>
        <item>Herrera</item>
        <item>Darién</item>
        <item>Bocas del Toro</item>
        <item>Emberá-Wounaan</item>
        <item>Guna Yala</item>
        <item>Naso Tjër Di</item>
        <item>Ngöbe-Buglé</item>
    </string-array>
    <string name="cap_example">Capitulo xxxxxxxxxx xxxxxxxxxxxxxxx xxxxxxxxxxxxxx</string>
    <string name="guardar">Guardar</string>
    <string name="salir">Salir</string>
    <string name="ncontrol">N° de control:</string>
    <string name="condiciones"><b><font color="#FF018786">CONDICIONES DE EMPADRONAMIENTO</font></b></string>
    <string name="inconsistencias"><b><font color="#218CBF">Inconsistencias:</font></b></string>
    <string name="ncontrolN"><b><font color="#218CBF">N° de control:</font></b></string>
    <string name="done">Aceptar</string>
    <string name="obss"><font color="#FF018786">OBSERVACIONES:</font></string>
    <string name="_0">0</string>
    <string name="decreto">La información solicitada esta amparada por el Decreto Estadistico y es Estrictamente Confidecial</string>
    <string name="ley">Ley 10 de 22 de enero de 2009</string>
    <string name="condici_n_de_la_encuesta"><b>Condición de la encuesta</b></string>
    <string name="condicion">Condicion</string>
    <string name="_00000">00000</string>
    <string name="n_de_control">N° de Control:</string>
    <string name="e00_0000">E00–0000</string>
    <string name="encuestador">Encuestador:</string>
    <string name="obs">OBSERVACIONES</string>
    <string name="version">versión 0.0</string>
    <string name="senacyt">SENACYT</string>
    <string name="backgroud">Backgroud</string>
    <string name="btinitForm">Encuesta de Innovación en Empresas</string>
    <string name="btinitmodule">Módulo de Comercio Electrónico en la Empresa</string>
    <string name="tittleInno"><b>ENCUESTA DE INNOVACIÓN EN EMPRESAS</b></string>
    <string name="tittleMod"><b>COMERCIO ELECTRÓNICO EN LA EMPRESA</b></string>
    <string name="subtittle2Main">La información solicitada está amparada por el secreto estadístico y es estrictamente confidencial\n\nLEY 10 DEL 22 DE ENERO DE 2009</string>
    <string name="subtittle3Main">LEY 10 DEL 22 DE ENERO DE 2009</string>
    <string name="tittle1Main">CONTRALORÍA GENERAL DE LA REPÚBLICA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_ncontrol"><b>Número de Control</b></string>
    <string name="expand">Expand</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_user">Usuario</string>
    <string name="blank"> </string>
    <string name="point3">…</string>
    <string name="a">a.</string>
    <string name="b">b.</string>
    <string name="c">c.</string>
    <string name="d">d.</string>
    <string name="e">e.</string>
    <string name="f">f.</string>
    <string name="g">g.</string>
    <string name="n1">1. </string>
    <string name="n2">2. </string>
    <string name="n3">3. </string>
    <string name="n4">4. </string>
    <string name="n5">5. </string>
    <string name="n6">6. </string>
    <string name="n7">7. </string>
    <string name="n8">8. </string>
    <string name="n9">9. </string>
    <string name="n10">10. </string>
    <string name="n11">11. </string>
    <string name="n12">12. </string>
    <string name="n13">13. </string>
    <string name="n14">14. </string>
    <string name="n15">15. </string>
    <string name="n22">22.  </string>
    <string name="p23">23.  </string>
    <string name="p24">24.  </string>
    <string name="p25">25.  </string>
    <string name="p26">26.  </string>
    <string name="p27">27.  </string>
    <string name="p28">28.  </string>
    <string name="p29">29.  </string>
    <string name="p30">30.  </string>
    <string name="p31">31.  </string>
    <string name="p32">32.  </string>
    <string name="p33">33.  </string>
    <string name="p34">34.  </string>
    <string name="p35">35.  </string>
    <string name="p36">36.  </string>
    <string name="infobt">INFORME y Observaciones</string>
</resources>