<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <data>

  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:animateLayoutChanges="true"
      android:background="@drawable/foreground_back">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutpiemain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <ScrollView
          android:id="@+id/scrollMain"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:orientation="vertical"
          android:fillViewport="true"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/linearFormMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginHorizontal="7dp"
              android:layout_marginBottom="5dp"
              android:animateLayoutChanges="true"
              android:orientation="vertical"
              app:cornerRadius="5dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btEncuestaMain"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:drawableTint="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|center_vertical"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/btinitForm"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:textSize="@dimen/text16"
                android:textStyle="bold"
                app:backgroundTint="@color/txtBlueD"
                app:cornerRadius="5dp"
                app:icon="@drawable/img_expand_more"
                app:iconPadding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/blue_dark"
                app:strokeWidth="1dp"
                tools:ignore="TouchTargetSizeCheck" />

            <LinearLayout
                android:id="@+id/linearEncuestaMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:visibility="gone"
                android:orientation="vertical"
                android:paddingVertical="7dp">

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btcap01main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/c01"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="@color/white"
                  android:textStyle="bold" />

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btcap02main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/c02"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="@color/white"
                  android:textStyle="bold" />

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btcap03main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/c03"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="@color/white"
                  android:textStyle="bold" />

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btcap04main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/c04"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="@color/white"
                  android:textStyle="bold" />

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btcap05main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/c05"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="@color/white"
                  android:textStyle="bold" />

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btcap06main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/c06"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="@color/white"
                  android:textStyle="bold" />

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btcap07main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/c07"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="@color/white"
                  android:textStyle="bold" />

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btcap08main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/c08"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="@color/white"
                  android:textStyle="bold" />

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btcap09main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/c09"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="@color/white"
                  android:textStyle="bold" />

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btcap10main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/c10"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="@color/white"
                  android:textStyle="bold" />

            </LinearLayout>

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginHorizontal="7dp"
              android:layout_marginVertical="5dp"
              android:animateLayoutChanges="true"
              android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btModuloMain"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:drawableTint="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start|center_vertical"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/btinitmodule"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:textSize="@dimen/text14"
                android:textStyle="bold"
                app:backgroundTint="#D8B18B"
                app:cornerRadius="5dp"
                app:icon="@drawable/img_expand_more"
                app:iconPadding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="#C38832"
                app:strokeWidth="1dp"
                tools:ignore="TouchTargetSizeCheck" />

            <LinearLayout
                android:id="@+id/linearModuloMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical"
                android:paddingHorizontal="7dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btsec01main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/s01"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="#757575"
                  android:textStyle="bold"
                  app:backgroundTint="#E4D0AF" />

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btsec02main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/s02"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="#757575"
                  android:textStyle="bold"
                  app:backgroundTint="#E4D0AF" />

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btsec03main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/s03"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="#757575"
                  android:textStyle="bold"
                  app:backgroundTint="#E4D0AF" />

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/btsec04main"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:fontFamily="sans-serif-condensed"
                  android:gravity="start|center_vertical"
                  android:maxLines="1"
                  android:text="@string/s04"
                  android:textAllCaps="false"
                  android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                  android:textColor="#757575"
                  android:textStyle="bold"
                  app:backgroundTint="#E4D0AF" />

            </LinearLayout>
            <!-- #D8B18B -->
          </LinearLayout>

          <com.google.android.material.button.MaterialButton
              android:id="@+id/btsec05main"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:layout_marginHorizontal="7dp"
              android:layout_marginVertical="5dp"
              android:ellipsize="end"
              android:fontFamily="sans-serif-condensed"
              android:gravity="start|center_vertical"
              android:maxLines="1"
              android:text="@string/infobt"
              android:textAllCaps="false"
              android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
              android:textColor="@color/white"
              android:textStyle="bold"
              app:backgroundTint="@color/teal_700"
              app:icon="@drawable/img_forward" />

        </LinearLayout>

      </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layoutpiemain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="17dp"
        android:gravity="center"
        android:visibility="gone"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseCompoundDrawables">

      <ImageView
          android:id="@+id/imageView7"
          android:layout_width="wrap_content"
          android:layout_height="55dp"
          app:srcCompat="@drawable/logo_senacyt"
          android:contentDescription="@string/senacyt" />

      <TextView
          android:id="@+id/versionsearch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="sans-serif-condensed"
          android:textSize="12sp"
          android:textColor="@android:color/holo_blue_dark"
          android:text="@string/version" />
    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>